--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="p-all">
             <!-- Project Discover Section Constructed using CSS Grid -->
                 <div>
-                    <h2>About PicTale</h2>
+                    <h2 class="txtmv">About PicTale</h2>
                     <p class="m-b">Inspired from the need to preserve scattered memories amidst a bustling life, PicTale was born as a solution to elegantly organize life's precious moments. Catering to busy professionals, parents, and sentimental souls alike, PicTale simplifies the process of curating and sharing personal stories through its intuitive interface and collaborative features, fostering a deeper connection to the memories that matter most.</p>
                 </div>
                 <div class="spacer m-t m-b"></div>
@@ -60,42 +60,42 @@
                             <picture>
                                 <img src="images/OrgainizedLibrary1.svg" class="featureImg" alt="Photo Organization Graphic" width="416" height="294">
                             </picture>
-                            <h3 class="m-t">Intelligent Photo Library Organization</h3>
+                            <h3 class="m-t txtmv">Intelligent Photo Library Organization</h3>
                             <p>Automatically organize memories by location, date, and relevance, making it easy to navigate through your personal narrative and find the moments that matter most.</p>
                         </div>
                         <div class="grid-3x2-2 gap-r">
                             <picture>
                                 <img src="images/DigitalScrap1.svg" class="featureImg" alt="Digital Scrapbooking Graphic" width="416" height="294">
                             </picture>
-                            <h3 class="m-t">AI-Driven Digital Scrapbooking</h3>
+                            <h3 class="m-t txtmv">AI-Driven Digital Scrapbooking</h3>
                             <p>Access a suite of creative tools such as filters, stickers, and themes for users to enhance and personalize their memories within the app.</p>
                         </div>
                         <div class="grid-3x2-3 gap-r">
                             <picture>
                                 <img src="images/SocialMedia1.svg" class="featureImg" alt="Social Media Integration Graphic" width="416" height="294">
                             </picture>
-                            <h3 class="m-t">Multi-Platform Integration</h3>
+                            <h3 class="m-t txtmv">Multi-Platform Integration</h3>
                             <p>Seamlessly integrate with various platforms, including social media, allowing users to share their memories with their friends and loved ones.</p>
                         </div>
                         <div class="grid-3x2-4 gap-r">
                             <picture>
                                 <img src="images/Customizable1.svg" class="featureImg" alt="Memory Templates Graphic" width="416" height="294">
                             </picture>
-                            <h3 class="m-t">Customizable Memory Templates</h3>
+                            <h3 class="m-t txtmv">Customizable Memory Templates</h3>
                             <p>Choose from a variety of pre-designed templates to create beautifully curated memory collections for different occasions such as birthdays, vacations, or holidays, allowing users to easily showcase their memories to their friends and family.</p>
                         </div>
                         <div class="grid-3x2-5 gap-r">
                             <picture>
                                 <img src="images/Notifications1.svg" class="featureImg" alt="Flashback Notifications Graphic" width="416" height="294">
                             </picture>
-                            <h3 class="m-t">Flashback Notifications </h3>
+                            <h3 class="m-t txtmv">Flashback Notifications</h3>
                             <p>Recall memories and moments from the past through personalized recommendations and curated collections, encouraging users to revisit and relive their favorite moments.</p>
                         </div>
                         <div class="grid-3x2-6 gap-r">
                             <picture>
                                 <img src="images/Audio1.svg" class="featureImg" alt="Voice & Video Journaling Graphic" width="416" height="294">
                             </picture>
-                            <h3 class="m-t">Voice and Video Journaling</h3>
+                            <h3 class="m-t txtmv">Voice and Video Journaling</h3>
                             <p>Allow users to record voice or video snippets to accompany their photos and notes, adding a multi-sensory layer to their digital scrapbook.</p>
                         </div>
                     </div>
