--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
                     <div class="contact-column">
                         <div>
                             <picture>
-                                <img src="images/square-facebook.svg" alt="facebook" class="socialbutton" width="75px" height="86px">
+                                <img src="images/square-facebook.svg" alt="facebook" class="socialbutton" width="75" height="86">
                             </picture>
                             <picture>
-                                <img src="images/square-instagram.svg" alt="Instagram" class="socialbutton" width="75px" height="86px">
+                                <img src="images/square-instagram.svg" alt="Instagram" class="socialbutton" width="75" height="86">
                             </picture>
                             <picture>
-                                <img src="images/square-x-twitter.svg" alt="Twitter" class="socialbutton" width="75px" height="86px">
+                                <img src="images/square-x-twitter.svg" alt="Twitter" class="socialbutton" width="75" height="86">
                             </picture>
                         </div>
                     </div>
