--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <img src="images/Audio1.svg" class="featureImg" alt="Voice & Video Journaling Graphic" width="416" height="294">
                             </picture>
                             <h3 class="m-t txtmv">Voice and Video Journaling</h3>
-                            <p>Allow users to record voice or video snippets to accompany their photos and notes, adding a multi-sensory layer to their digital scrapbook.</p>
+                            <p>Allows users to record voice or video snippets to accompany their photos and notes or select a song to add a multi-sensory layer to their digital scrapbook.</p>
                         </div>
                     </div>
                 </div>
