--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="grid-half1r">
                     <div class="HalfLeft">
                         <h3 class="gap-r m-t txtw">The Mobile Scrapbooking App</h3>
-                        <h1 class="gap-r txtw">Unveil Your Story, One Shanpshot at a Time.</h1>
+                        <h1 class="gap-r txtw">Unveil Your Story, One Snapshot at a Time.</h1>
                         <p class="m-b gap-r txtw">PicTale is your digital scrapbook that will seamlessly organizing your life's moments into a personalized narrative. Capture, reminisce, and share your story effortlessly, preserving memories for generations to come.</p>     
                         <a href="https://www.apple.com/app-store/" target="_blank">
                             <picture>
